--- a/templates/userMovies.html
+++ b/templates/userMovies.html
@@ -17,6 +17,8 @@
 			<th>Genre</th>
 			<th>Rating</th>
 			<th>Released</th>
+			<th>Remove</th>
+			<th>Watched</th>
 		</tr>
 		</thead>
 		<tbody>
@@ -26,6 +28,22 @@
 				<td><h2> {{ item.genre }}</h2></td>
 				<td><h2> {{ item.rating }}</h2></td>
 				<td><h2> {{ item.released }}</h2></td>
+				<td>
+					<form method="POST" action="/delete/{{item._id}}">
+						<button class="button is-danger">Remove</button>
+					</form>
+				</td>
+				<td>
+					{% if item.watched == 'true' %}
+					<form method="POST" action="/unwatch/{{item._id}}">
+						<button class="button is-primary is-outlined">Watched</button>
+					</form>
+					{% else %}
+					<form method="POST" action="/watched/{{item._id}}">
+						<button class="button is-primary">Watch</button>
+					</form>
+					{% endif %}
+				</td>
 			</tr>
 		{% endfor %}
 		</tbody>
